21-network-policies/manifests/deny-all-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: default
spec:
  podSelector: {} # An empty podSelector selects all pods in the namespace
  policyTypes:
    - Ingress # This policy applies to incoming traffic
    - Egress # This policy applies to outgoing traffic
